# BrickGame

./: README.md
src/: CMakeLists.txt  Makefile  README.txt
src/brick_game/: defines.h
src/brick_game/snake/: backend_snake.cc  backend_snake.h
src/brick_game/tetris/: backend_tetris.cc  backend_tetris.h
src/gui/cli/: frontend.cc  frontend.h
src/gui/desktop/: frontend.cc  frontend.h
src/inc/: console.cc  qt.cc
src/info/: Doxyfile  info.tex
src/tests/: tests.cc
